--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+Web site - arquivo com o texto para o seu site
+
+VINIL GROOVE
+
+Nosso site é o local ideal para os amantes de música que apreciam a riqueza analógica e a capa deslumbrante dos LPs.
+ 	Temos um vasto catálogo que abraça todos os gêneros, Nossos discos são selecionados a dedo , garantindo a qualidade e autenticidade de cada um.
+	Temos uma equipe dedicada que atualiza constantemente nosso catálogo para garantir que nossos clientes encontrem seus títulos favoritos. Aproveite também nossas promoções e adicione novos títulos à sua coleção!
 
