--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-Web site - arquivo com o texto para o seu site
+    <!DOCTYPE html>
+    <html lang="pt-br">
+	    <head>
+		    <link rel="shortcut icon" type="imagex/png" href="record.png">
+            </head>
+		    <body>
+			    <title>VINIL GROOVE</title>
+			    <h1> SOBRE A VINIL GROOVE</h1>
+			    <p>Nosso site é o local ideal para os amantes de música que apreciam a <strong>riqueza analógica</strong> e a capa deslumbrante dos LPs.</p>
+                <p>Temos um vasto catálogo que abraça <em>todos os gêneros</em>, Nossos discos são selecionados a dedo , garantindo a qualidade e autenticidade de cada um.</p>		
+		    <p>Temos uma equipe dedicada que atualiza constantemente nosso catálogo para garantir que nossos clientes encontrem seus títulos favoritos. Aproveite também nossas promoções e adicione novos títulos à sua coleção!</p>
+     
 
-VINIL GROOVE
-
-Nosso site é o local ideal para os amantes de música que apreciam a riqueza analógica e a capa deslumbrante dos LPs.
- 	Temos um vasto catálogo que abraça todos os gêneros, Nossos discos são selecionados a dedo , garantindo a qualidade e autenticidade de cada um.
-	Temos uma equipe dedicada que atualiza constantemente nosso catálogo para garantir que nossos clientes encontrem seus títulos favoritos. Aproveite também nossas promoções e adicione novos títulos à sua coleção!
-
+    </body>
+	
+	    
