--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <html lang="pt-br">
 	    <head>
 		    <link rel="shortcut icon" type="imagex/png" href="record.png">
+		     <link rel="stylesheet" href="style.css">
             </head>
 		    <body>
 			    <title>VINIL GROOVE</title>
