--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	    <head>
 		    <link rel="shortcut icon" type="imagex/png" href="record.png">
 		     <link rel="stylesheet" href="style.css">
+		     <meta charset="UTF-8">
+		    <html lang="pt-br">
             </head>
 		    <body>
 			    <title>VINIL GROOVE</title>
