--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		    <html lang="pt-br">
             </head>
 		    <body>
+			    <a href="https://ibb.co/09S4VH8"><img src="https://i.ibb.co/R6mr4RZ/Vinil-Groove.png" alt="Vinil-Groove" border="0"></a><br /><a target='_blank' href='https://imgbb.com/'>temp file upload</a><br />
+			    
 			    <title>VINIL GROOVE</title>
 			    <h1 style="text-align: center"> SOBRE A VINIL GROOVE</h1>
 			    <p>Nosso site é o local ideal para os amantes de música que apreciam a <strong>riqueza analógica</strong> e a capa deslumbrante dos LPs.</p>
